--- a/index.html
+++ b/index.html
@@ -5,18 +5,33 @@
  </head> 
  <body>
   <h1>Dasmoto's Arts & Crafts</h1>
-  <h2 id="brushes">Brushes </h2>
-  <img class="brush-picture" src="C:\CodeAcademy\Projects\Dasmoto's\images\hacksaw.webp" alt="Picture of brushes">
-    <h3>Brushes</h3>
+
+  <!--Brushes section-->
+
+  <div class="item">
+    <h2 id="brushes">Brushes </h2>
+    <img class="brush-picture" src="C:\CodeAcademy\Projects\Dasmoto's\images\hacksaw.webp" alt="Picture of brushes">
+     <h3>Brushes</h3>
       <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <b class="prices"> Starting at $3.00 / brush.</b></p>
-  <h2 id="frames">Frames</h2>
-  <img class="frame-picture" src="C:\CodeAcademy\Projects\Dasmoto's\images\frames.webp" alt="Picture of frames">
-    <h3>Art Frames (assorted)</h3>
+  </div>
+
+  <!--Frames section-->
+
+  <div class="item">
+    <h2 id="frames">Frames</h2>
+    <img class="frame-picture" src="C:\CodeAcademy\Projects\Dasmoto's\images\frames.webp" alt="Picture of frames">
+     <h3>Art Frames (assorted)</h3>
       <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <b class="prices">Starting at $2.00 / frame.</b></p>
-  <h2 id="paint">Paint</h2>
-  <img class="paint-picture" src="C:\CodeAcademy\Projects\Dasmoto's\images\finnish.jpeg" alt="Picture of paint">
-    <h3>Clean Finnish Paint</h3>
+  </div>
+
+  <!--Paint Section-->
+
+  <div class="item">
+    <h2 id="paint">Paint</h2>
+    <img class="paint-picture" src="C:\CodeAcademy\Projects\Dasmoto's\images\finnish.jpeg" alt="Picture of paint">
+      <h3>Clean Finnish Paint</h3>
       <p>Imported paint from Finland. Over 256 colors available in-store, varying in quanity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <b class="prices">Starting at $5.00 / tube.</b></p>
+   </div>
+
 </body>
- 
 </html>
